--- a/SpriteWalkthough/Base.lproj/Main.storyboard
+++ b/SpriteWalkthough/Base.lproj/Main.storyboard
@@ -28,6 +28,8 @@
             <string>Moon-Bold</string>
             <string>Moon-Bold</string>
             <string>Moon-Bold</string>
+            <string>Moon-Bold</string>
+            <string>Moon-Bold</string>
         </mutableArray>
     </customFonts>
     <scenes>
@@ -377,6 +379,29 @@ ATTACK</string>
                                 <color key="textColor" red="1" green="0.44439655169999998" blue="0.87338362069999997" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Controls" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H2D-hB-Sdw">
+                                <rect key="frame" x="37" y="379" width="118" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="H2D-hB-Sdw" secondAttribute="height" multiplier="118:21" id="bUb-eC-00G"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Moon-Bold" family="Moon" pointSize="18"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Weq-sB-GFZ">
+                                <rect key="frame" x="163" y="375" width="99" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Weq-sB-GFZ" secondAttribute="height" multiplier="33:10" id="NRv-yd-Eok"/>
+                                    <constraint firstAttribute="width" constant="99" id="m9j-Qk-xzs"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Moon-Bold" family="Moon" pointSize="14"/>
+                                <state key="normal" title="Tilt Screen">
+                                    <color key="titleColor" red="1" green="0.44439655169999998" blue="0.87338362069999997" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="controlsAction:" destination="8hq-Uf-RA3" eventType="touchUpInside" id="5DE-MZ-ra1"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -384,24 +409,28 @@ ATTACK</string>
                             <constraint firstItem="rWG-hw-Xm7" firstAttribute="top" secondItem="tnT-uA-cOo" secondAttribute="bottom" constant="86" id="0ru-uN-XMw"/>
                             <constraint firstItem="cEP-Ay-vO5" firstAttribute="top" secondItem="G9W-eZ-eNc" secondAttribute="top" constant="-4" id="1cI-L9-QY0"/>
                             <constraint firstItem="rhu-az-gGa" firstAttribute="top" secondItem="wMI-5d-o5G" secondAttribute="bottom" id="2Oh-8W-00r"/>
+                            <constraint firstItem="H2D-hB-Sdw" firstAttribute="leading" secondItem="yfZ-e7-vgQ" secondAttribute="leading" id="3KR-5T-UpK"/>
                             <constraint firstAttribute="trailing" secondItem="7me-Bu-jXn" secondAttribute="trailing" constant="38" id="3bJ-5Z-bs1"/>
                             <constraint firstItem="6K5-5I-WsQ" firstAttribute="top" secondItem="iKH-gh-k8M" secondAttribute="top" id="8bk-0x-oTR"/>
                             <constraint firstItem="yfZ-e7-vgQ" firstAttribute="leading" secondItem="G9W-eZ-eNc" secondAttribute="leading" id="9cJ-Jq-zOc"/>
                             <constraint firstItem="6K5-5I-WsQ" firstAttribute="leading" secondItem="iKH-gh-k8M" secondAttribute="leading" id="AsL-QO-LwS"/>
                             <constraint firstAttribute="trailing" secondItem="6K5-5I-WsQ" secondAttribute="trailing" constant="214" id="Chi-yS-EWA"/>
                             <constraint firstItem="rhu-az-gGa" firstAttribute="top" secondItem="f8E-wy-e1C" secondAttribute="bottom" id="E2q-nF-mNz"/>
+                            <constraint firstItem="H2D-hB-Sdw" firstAttribute="top" secondItem="yfZ-e7-vgQ" secondAttribute="bottom" constant="61" id="INr-oz-AVI"/>
                             <constraint firstAttribute="trailing" secondItem="f8E-wy-e1C" secondAttribute="trailing" id="MlQ-qa-t3z"/>
                             <constraint firstItem="f8E-wy-e1C" firstAttribute="top" secondItem="iKH-gh-k8M" secondAttribute="top" id="N8v-tq-PMa"/>
                             <constraint firstItem="rWG-hw-Xm7" firstAttribute="leading" secondItem="iKH-gh-k8M" secondAttribute="leading" constant="37" id="OGu-k0-pQo"/>
                             <constraint firstAttribute="trailing" secondItem="tnT-uA-cOo" secondAttribute="trailing" constant="20" id="VPJ-Di-LiS"/>
                             <constraint firstItem="wMI-5d-o5G" firstAttribute="leading" secondItem="iKH-gh-k8M" secondAttribute="leading" id="W8c-Tp-tiG"/>
                             <constraint firstItem="tnT-uA-cOo" firstAttribute="top" secondItem="iKH-gh-k8M" secondAttribute="top" id="YYI-wc-y9z"/>
+                            <constraint firstItem="Weq-sB-GFZ" firstAttribute="centerX" secondItem="qeo-UB-jdO" secondAttribute="centerX" id="aHe-kv-cC7"/>
                             <constraint firstAttribute="trailing" secondItem="yfZ-e7-vgQ" secondAttribute="trailing" constant="133" id="aYx-Yv-YMY"/>
                             <constraint firstAttribute="trailing" secondItem="rWG-hw-Xm7" secondAttribute="trailing" constant="202" id="bTU-en-W84"/>
                             <constraint firstItem="G9W-eZ-eNc" firstAttribute="trailing" secondItem="rWG-hw-Xm7" secondAttribute="trailing" id="cF0-p8-ZuY"/>
                             <constraint firstItem="qeo-UB-jdO" firstAttribute="top" secondItem="yfZ-e7-vgQ" secondAttribute="top" constant="-5" id="dim-N0-mMG"/>
                             <constraint firstItem="f8E-wy-e1C" firstAttribute="leading" secondItem="iKH-gh-k8M" secondAttribute="leading" id="eUF-SP-4SB"/>
                             <constraint firstItem="7me-Bu-jXn" firstAttribute="top" secondItem="rWG-hw-Xm7" secondAttribute="top" constant="-4" id="gGj-tF-5zy"/>
+                            <constraint firstItem="Weq-sB-GFZ" firstAttribute="top" secondItem="qeo-UB-jdO" secondAttribute="bottom" constant="52" id="jEN-zA-311"/>
                             <constraint firstItem="qeo-UB-jdO" firstAttribute="centerX" secondItem="cEP-Ay-vO5" secondAttribute="centerX" id="jXN-Bb-mry"/>
                             <constraint firstItem="yfZ-e7-vgQ" firstAttribute="top" secondItem="G9W-eZ-eNc" secondAttribute="bottom" constant="57" id="lMb-QI-ZOH"/>
                             <constraint firstItem="cEP-Ay-vO5" firstAttribute="leading" secondItem="7me-Bu-jXn" secondAttribute="leading" id="lRA-ev-G9i"/>
@@ -409,6 +438,7 @@ ATTACK</string>
                             <constraint firstItem="tnT-uA-cOo" firstAttribute="leading" secondItem="iKH-gh-k8M" secondAttribute="leading" constant="20" id="s25-0l-dit"/>
                             <constraint firstItem="cEP-Ay-vO5" firstAttribute="trailing" secondItem="7me-Bu-jXn" secondAttribute="trailing" id="uYk-EA-VWh"/>
                             <constraint firstItem="G9W-eZ-eNc" firstAttribute="top" secondItem="rWG-hw-Xm7" secondAttribute="bottom" constant="54" id="vVC-J4-nQC"/>
+                            <constraint firstAttribute="trailing" secondItem="H2D-hB-Sdw" secondAttribute="trailing" constant="165" id="wlI-Ft-MfG"/>
                             <constraint firstItem="7me-Bu-jXn" firstAttribute="leading" secondItem="iKH-gh-k8M" secondAttribute="leading" constant="143" id="y5F-j1-iyv"/>
                         </constraints>
                     </view>
@@ -419,6 +449,8 @@ ATTACK</string>
                         <outlet property="constraintLeadingSFX" destination="OGu-k0-pQo" id="vFr-BO-wz2"/>
                         <outlet property="constraintLeadingSFXSlider" destination="y5F-j1-iyv" id="Pmc-eo-nia"/>
                         <outlet property="constraintLeadingSettings" destination="s25-0l-dit" id="kWp-JO-vNf"/>
+                        <outlet property="constraintTopControls" destination="INr-oz-AVI" id="dgX-xp-feS"/>
+                        <outlet property="constraintTopControlsButton" destination="jEN-zA-311" id="Tai-gQ-jff"/>
                         <outlet property="constraintTopMusic" destination="vVC-J4-nQC" id="Vy8-CJ-rbf"/>
                         <outlet property="constraintTopMusicSlider" destination="1cI-L9-QY0" id="v6I-XV-7Xc"/>
                         <outlet property="constraintTopSFX" destination="0ru-uN-XMw" id="KJR-2t-6gm"/>
@@ -426,10 +458,14 @@ ATTACK</string>
                         <outlet property="constraintTopVibrate" destination="lMb-QI-ZOH" id="gmp-3q-eJh"/>
                         <outlet property="constraintTopVibrateSwitch" destination="dim-N0-mMG" id="9q3-wr-quq"/>
                         <outlet property="constraintTrailingBack" destination="Chi-yS-EWA" id="3qR-IT-8N7"/>
+                        <outlet property="constraintTrailingControls" destination="wlI-Ft-MfG" id="U4j-BC-eV0"/>
                         <outlet property="constraintTrailingSFX" destination="bTU-en-W84" id="NGr-z7-nyg"/>
                         <outlet property="constraintTrailingSFXSlider" destination="3bJ-5Z-bs1" id="GJp-6B-I83"/>
                         <outlet property="constraintTrailingSettings" destination="VPJ-Di-LiS" id="zxr-Ty-U1M"/>
                         <outlet property="constraintTrailingVibrate" destination="aYx-Yv-YMY" id="sLk-hO-8ql"/>
+                        <outlet property="constraintWidthControlsButton" destination="m9j-Qk-xzs" id="SEQ-29-QRL"/>
+                        <outlet property="controlsButton" destination="Weq-sB-GFZ" id="sgx-1j-vke"/>
+                        <outlet property="controlsLabel" destination="H2D-hB-Sdw" id="g4H-Ac-z3r"/>
                         <outlet property="helpButton" destination="wMI-5d-o5G" id="C87-fT-XHp"/>
                         <outlet property="musicLabel" destination="G9W-eZ-eNc" id="sjf-cR-ylr"/>
                         <outlet property="musicVolumeSlider" destination="cEP-Ay-vO5" id="KhG-Ts-I5o"/>
